# listen.cpp

./: CMakeLists.txt  README.md  listen.cpp  notes.txt
src/: CMakeLists.txt  listen.cpp  listen.h
test/: CMakeLists.txt  gold_conv2.gaibin  gold_conv2gelu.gaibin  test.cpp
test/model_weights/tiny_en/: encoder_conv1_bias.gaibin  encoder_conv1_weight.gaibin  encoder_conv2_bias.gaibin  encoder_conv2_weight.gaibin  gold_input.gaibin
